# packages/shared/src/apigen/models/http-config.ts
@@ -1,0 +1,49 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pulse API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+/**
+ * 
+ * @export
+ * @interface HttpConfig
+ */
+export interface HttpConfig {
+    /**
+     * 
+     * @type {string}
+     * @memberof HttpConfig
+     */
+    'url': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof HttpConfig
+     */
+    'method': HttpConfigMethodEnum;
+}
+
+export const HttpConfigMethodEnum = {
+    get: 'GET',
+    post: 'POST',
+    put: 'PUT',
+    delete: 'DELETE',
+    head: 'HEAD',
+    options: 'OPTIONS',
+    patch: 'PATCH'
+} as const;
+
+export type HttpConfigMethodEnum = typeof HttpConfigMethodEnum[keyof typeof HttpConfigMethodEnum];
+
+
